--- a/k8s/prometheus-federation/services/prometheus-tls-service.yml
+++ b/k8s/prometheus-federation/services/prometheus-tls-service.yml
@@ -24,8 +24,9 @@ metadata:
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/auth-type: basic
-    nginx.ingress.kubernetes.io/auth-secret: prometheus-auth
-    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
+    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
+    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
+
 spec:
   tls:
   - hosts:
@@ -39,3 +40,7 @@ spec:
         backend:
           serviceName: prometheus-tls-service
           servicePort: 9090
+      - backend:
+          serviceName: oauth2-proxy
+          servicePort: 4180
+        path: /oauth2
