--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -16,14 +16,15 @@ spec:
     spec:
       containers:
       - args:
-        - -provider=google
-        - -upstream=file:///dev/null
-        - -http-address=0.0.0.0:4180
-        - -client-id={{OAUTH_PROXY_CLIENT_ID}}
-        - -client-secret={{OAUTH_PROXY_CLIENT_SECRET}}
-        - -cookie-domain=prometheus.{{GCLOUD_PROJECT}}.measurementlab.net
-        - -cookie-refresh=1h
-        - -cookie-secret='0tcbJv2l9T1uwN0nxTSqeA=='
+        - --provider=google
+        - --upstream=file:///dev/null
+        - --http-address=0.0.0.0:4180
+        - --client-id={{OAUTH_PROXY_CLIENT_ID}}
+        - --client-secret={{OAUTH_PROXY_CLIENT_SECRET}}
+        - --cookie-domain=prometheus.{{GCLOUD_PROJECT}}.measurementlab.net
+        - --cookie-refresh=1h
+        - --cookie-secret='0tcbJv2l9T1uwN0nxTSqeA=='
+        - --email-domain="measurementlab.net"
         image: quay.io/oauth2-proxy/oauth2-proxy:v6.0.0-amd64
         name: oauth2-proxy
         ports:
