--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -23,7 +23,7 @@ spec:
         - --client-secret={{OAUTH_PROXY_CLIENT_SECRET}}
         - --cookie-domain=prometheus.{{GCLOUD_PROJECT}}.measurementlab.net
         - --cookie-refresh=1h
-        - --cookie-secret='0tcbJv2l9T1uwN0nxTSqeA=='
+        - --cookie-secret="/3OHMngoivRW7Ge0AU5Kaw=="
         - --email-domain="measurementlab.net"
         image: quay.io/oauth2-proxy/oauth2-proxy:v6.0.0-amd64
         name: oauth2-proxy
