--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -2,17 +2,17 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
-    app: oauth2-proxy
+    run: oauth2-proxy
   name: oauth2-proxy
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: oauth2-proxy
+      run: oauth2-proxy
   template:
     metadata:
       labels:
-        app: oauth2-proxy
+        run: oauth2-proxy
     spec:
       containers:
       - args:
