--- a/k8s/prometheus-federation/services/prometheus-tls-service.yml
+++ b/k8s/prometheus-federation/services/prometheus-tls-service.yml
@@ -23,8 +23,8 @@ metadata:
   annotations:
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
-    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
+    nginx.ingress.kubernetes.io/auth-url: "https://prometheus.mlab-sandbox.measurementlab.net/oauth2/auth"
+    nginx.ingress.kubernetes.io/auth-signin: "https://prometheus.mlab-sandbox.measurementlab.net/oauth2/start?rd=$escaped_request_uri"
 
 spec:
   tls:
