--- a/k8s/prometheus-federation/services/prometheus-tls-service.yml
+++ b/k8s/prometheus-federation/services/prometheus-tls-service.yml
@@ -23,9 +23,8 @@ metadata:
   annotations:
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/auth-url: "https://prometheus.mlab-sandbox.measurementlab.net/oauth2/auth"
-    nginx.ingress.kubernetes.io/auth-signin: "https://prometheus.mlab-sandbox.measurementlab.net/oauth2/start?rd=$escaped_request_uri"
-
+    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
+    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
 spec:
   tls:
   - hosts:
@@ -39,7 +38,3 @@ spec:
         backend:
           serviceName: prometheus-tls-service
           servicePort: 9090
-      - backend:
-          serviceName: oauth2-proxy
-          servicePort: 4180
-        path: /oauth2
