--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -25,7 +25,10 @@ spec:
         - --cookie-refresh=1h
         - --cookie-secret=0tcbJv2l9T1uwN0nxTSqeA==
         - --email-domain=measurementlab.net
-        image: quay.io/oauth2-proxy/oauth2-proxy:v4.1.0-amd64
+        - --email-domain=mlab-sandbox.iam.gserviceaccount.com
+        - --skip-jwt-bearer-tokens=true
+        - --extra-jwt-issuers="https://accounts.google.com=https://prometheus.mlab-sandbox.measurementlab.net"
+        image: quay.io/oauth2-proxy/oauth2-proxy:v6.1.1
         name: oauth2-proxy
         ports:
         - containerPort: 4180
